--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,5 @@
 {
-  "projects": {
-    "default": "flutterfire-ui-codelab"
-  }
+    "projects": {
+        "default": "flutterfire-ui-codelab-af676"
+    }
 }
