--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>963656261848-v7r3vq1v6haupv0l1mdrmsf56ktnua60.apps.googleusercontent.com</string>
+	<string>739489456051-e4mn4g7pf1cs7gehrvf4gt3f0pr015om.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.963656261848-v7r3vq1v6haupv0l1mdrmsf56ktnua60</string>
+	<string>com.googleusercontent.apps.739489456051-e4mn4g7pf1cs7gehrvf4gt3f0pr015om</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBqLWsqFjYAdGyihKTahMRDQMo0N6NVjAs</string>
+	<string>AIzaSyCTIce8blrM5znCvjYkI9NgtuLEdPNt5Wk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>963656261848</string>
+	<string>739489456051</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.complete</string>
 	<key>PROJECT_ID</key>
-	<string>flutterfire-ui-codelab</string>
+	<string>flutterfire-ui-codelab-af676</string>
 	<key>STORAGE_BUCKET</key>
-	<string>flutterfire-ui-codelab.appspot.com</string>
+	<string>flutterfire-ui-codelab-af676.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:963656261848:ios:d9e01cfe8b675dfcb237ad</string>
+	<string>1:739489456051:ios:7e4cd7349189ce9250f5c6</string>
 </dict>
 </plist>
